[package]
name = "tilde-ampersand"
version = "0.2.0"
edition = "2024"
description = "A graphics and input API made in Rust."
repository = "https://github.com/ArchDustro/ampersand"
license = "MIT"
license-file = "../LICENSE"
readme= "../README.md"

[dependencies]
gdk = "0.18.2"
glib = "0.22.7"
gtk = "0.18.2"
